--- a/src/main/resources/assets/tdcdata/lang/en_us.json
+++ b/src/main/resources/assets/tdcdata/lang/en_us.json
@@ -7,5 +7,6 @@
   "commands.tdcdata.freeze.set.success.multiple": "Set the frozen ticks of %d targets to %d",
   "commands.tdcdata.get.current.success": "%s has %d frozen ticks",
   "commands.tdcdata.get.max.success": "%s can have a maximum of %d frozen ticks",
-  "commands.tdcdata.team.rule.keepinventory.success": "Set Keep Inventory for team %s to %B"
+  "commands.tdcdata.team.rule.keepinventory.success": "Set Keep Inventory for team %s to %s",
+  "commands.tdcdata.team.rule.keepinventory.unchanged": "Nothing changed. Keep Inventory already has that value"
 }
