--- a/src/main/resources/assets/tdcdata/lang/en_us.json
+++ b/src/main/resources/assets/tdcdata/lang/en_us.json
@@ -1,12 +1,3 @@
 {
-  "commands.tdcdata.freeze.add.success.single": "Added %d frozen ticks to %s (now %d)",
-  "commands.tdcdata.freeze.add.success.multiple": "Added %d frozen ticks to %d targets",
-  "commands.tdcdata.freeze.remove.success.single": "Removed %d frozen ticks from %s (now %d)",
-  "commands.tdcdata.freeze.remove.success.multiple": "Removed %d frozen ticks from %d targets",
-  "commands.tdcdata.freeze.set.success.single": "Set the frozen ticks of %s to %d",
-  "commands.tdcdata.freeze.set.success.multiple": "Set the frozen ticks of %d targets to %d",
-  "commands.tdcdata.get.current.success": "%s has %d frozen ticks",
-  "commands.tdcdata.get.max.success": "%s can have a maximum of %d frozen ticks",
-  "commands.tdcdata.team.rule.keepinventory.success": "Set Keep Inventory for team %s to %s",
-  "commands.tdcdata.team.rule.keepinventory.unchanged": "Nothing changed. Keep Inventory already has that value"
+  "itemGroup.tdcdata.unobtainable_group": "Obtainable Unobtainables"
 }
