no italic structure block

--- a/src/main/resources/assets/tdcdata/lang/en_us.json
+++ b/src/main/resources/assets/tdcdata/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "itemGroup.tdcdata.unobtainable_group": "Obtainable Unobtainables"
+  "itemGroup.tdcdata.unobtainable_group": "Obtainable Unobtainables",
+  "block.tdcdata.command_block.data": "Structure Data Block"
 }
